--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "commander": "^7.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "image-size": "^1.0.0",
     "koa": "^2.13.1",
