--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^3.6.7",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "octokit": "^1.0.5",
     "pug": "^3.0.2",
     "sharp": "^0.28.3",
     "tailwindcss": "^2.1.2",
