--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "octokit": "^1.0.5",
+    "prompts": "^2.4.1",
     "pug": "^3.0.2",
     "sharp": "^0.28.3",
     "tailwindcss": "^2.1.2",
