--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
