--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-route": "^3.2.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^6.0.0",
+    "marked": "^2.0.6",
     "mongodb": "^3.6.7",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
